--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "allowJs": true,
     "sourceMap": true,
     "moduleResolution": "node",
+    "downlevelIteration": true,
   },
   "include": ["src/**/*"]
 }
