--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "downlevelIteration": true,
+    "strictNullChecks": true
   },
   "include": ["src/**/*"]
 }
